--- a/src/classes/WaveApplicationDashboard.cls
+++ b/src/classes/WaveApplicationDashboard.cls
@@ -1,5 +1,7 @@
 public class WaveApplicationDashboard {
     public String name;
+    public String nameToSave;
     public String jsonUrl;
     public List<String> referencedDatasets;
+    public List<String> referencedDashboards;
 }
