--- a/src/classes/WaveMetadataApplicationDashboard.cls
+++ b/src/classes/WaveMetadataApplicationDashboard.cls
@@ -2,4 +2,5 @@ public class WaveMetadataApplicationDashboard {
     public String name;
     public String jsonUrl;
     public List<String> referencedDatasets;
+    public List<String> referencedDashboards;
 }
