--- a/src/classes/WaveMetadataApplicationDashboard.cls
+++ b/src/classes/WaveMetadataApplicationDashboard.cls
@@ -3,4 +3,5 @@ public class WaveMetadataApplicationDashboard {
     public String jsonUrl;
     public List<String> referencedDatasets;
     public List<String> referencedDashboards;
+    public List<String> referencedImages;
 }
