--- a/src/classes/WaveApplicationDashboard.cls
+++ b/src/classes/WaveApplicationDashboard.cls
@@ -4,4 +4,5 @@ public class WaveApplicationDashboard {
     public String jsonUrl;
     public List<String> referencedDatasets;
     public List<String> referencedDashboards;
+    public List<String> referencedImages;
 }
